@@ -22,6 +22,7 @@ dependencies {
 
 application {
     mainClass = "io.micronaut.python.cli.PyronautMainCommand"
+    applicationDefaultJvmArgs = listOf("--sun-misc-unsafe-memory-access=allow")
 }
 
 tasks {
